--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Coding AI</title>
+    <link rel="stylesheet" href="style.scss">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div id="chat_container">
+
+        <form>
+          <textarea name="prompt" rows="1" cols="1" placeholder="Ask Codex..."></textarea>
+          <button type="submit"><img src="./assets/send.svg" alt="send"></button>
+        </form>
+      </div>
+    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
