--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,6 @@
         </form>
       </div>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
